--- a/popup.css
+++ b/popup.css
@@ -13,6 +13,7 @@ body {
   }
   
   li {
+    width: 200px;
     padding: 12px 16px;
     border: 1px solid #e0e0e0;
     border-radius: 8px;
@@ -21,6 +22,8 @@ body {
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.05);
     cursor: pointer;
     transition: background-color 0.2s ease, transform 0.2s ease;
+    overflow-wrap: break-word;
+    word-break: break-word;
   }
   
   li:hover {
@@ -41,6 +44,8 @@ body {
     flex-grow: 1;
     padding-right: 12px;
     color: #333;
+    overflow-wrap: break-word;
+    word-break: break-word;
   }
   
   .copy-button,
@@ -81,17 +86,17 @@ body {
   .active .snippet-edit {
     display: block;
   }
-
+  
   .copy-popup {
     position: absolute;
     top: 100%;
     left: 0;
-    transform: translateY(5px); /* Optional: adds a small gap between button and popup */
+    transform: translateY(5px);
     background-color: #333;
     color: #fff;
     padding: 8px 8px;
     border-radius: 8px;
-    font-size: 12px; /* Adjust font size for better visibility */
+    font-size: 12px;
     box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
     z-index: 1000;
-}
+  }  
